bpo-46007: Exclude PyUnicode_CHECK_INTERNED() from limited C API (GH-29987)

Exclude the PyUnicode_CHECK_INTERNED() macro from the limited C API,
because it uses the PyASCIIObject structure which is excluded from
the limited C API.

Automerge-Triggered-By: GH:encukou